--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
     <div id="container">
         <!-- Start Screen -->
         <div id="startScreen">
-            <h1>🎱 Our Memory Pool 💕</h1>
+            <h1>🎱 Our Memory Pool 1.2💕</h1>
             <div class="info">Sink only our special moments! (Landscape recommended)</div>
             <div class="target-list"><div id="targetListDisplay"></div></div>
             <button onclick="startGame()">Start Game</button>
