--- a/index.html
+++ b/index.html
@@ -377,9 +377,9 @@
             <h1 style="font-size: 2em;">🎱💕🎊</h1>
             <h1>Perfect Memory!</h1>
             <div style="font-size: 1rem; margin: 20px 0; line-height: 1.7; color: #555;">
-                You remembered all our special moments! 💕<br><br>
-                Every memory with you is precious!<br><br>
-                So here's my question...<br><br>
+                Keen to make more memories woth you 🍰<br><br>
+                <br><br>
+                <br><br>
                 <span style="font-size: 1.5em; color: #c41e3a;">Will you be my Valentine?</span> 💘
             </div>
             <button id="yesBtn" class="green" onclick="celebrate()">YES! 💕</button>
@@ -391,9 +391,9 @@
             <h1 style="font-size: 2.5em;">🎱💖🥳💕✨</h1>
             <h1 style="color: #c41e3a;">YESSS!!! 🎊</h1>
             <div style="font-size: 1.1rem; margin: 25px 0; color: #555; line-height: 1.7;">
-                You just made me the happiest person ever! 💕<br><br>
-                Can't wait for all our future adventures!<br><br>
-                Valentine's Day will be PERFECT with you! 🌹💝
+                I will also be your Valentine Bubu ❤️<br><br>
+                Keen to Spend Next week with you 🍆<br><br>
+                🌹💝
             </div>
         </div>
     </div>
@@ -403,7 +403,7 @@
         <div class="modal">
             <h2>Oh No! 😅</h2>
             <p id="loseMsg" style="font-size: 1rem;"></p>
-            <p style="color: #666; margin-top: 15px;">But I'd ask you anyway! 💕</p>
+            <p style="color: #666; margin-top: 15px;">But I'd ask you anyway!</p>
             <button onclick="resetGame()">Try Again 🎱</button>
             <button class="secondary" onclick="forceWin()">Just Ask Me 💕</button>
         </div>
