--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
             <h1 style="font-size: 2em;">🎱💕🎊</h1>
             <h1>Perfect Memory!</h1>
             <div style="font-size: 1rem; margin: 20px 0; line-height: 1.7; color: #555;">
-                Keen to make more memories woth you 🍰<br><br>
+                Keen to make more memories with you 🍰<br><br>
                 <br><br>
                 <br><br>
                 <span style="font-size: 1.5em; color: #c41e3a;">Will you be my Valentine?</span> 💘
