--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Will You Be My Valentine? 💕</title>
+    <title> Bubu's Game </title>
     <style>
         * { 
             margin: 0; 
